# nas-downloader

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.example.yml  docker-compose.local.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/workflows/: ci.yml  release.yml
app/: __init__.py  auth.py  manifest.py  models.py  verify.py  worker.py  wsgi.py
app/routes/: api.py  sse.py  views.py
app/static/: app.js
app/templates/: base.html  login.html  manifest_detail.html  manifests.html
test-state/: nas-downloader.db  nas-downloader.db-shm  nas-downloader.db-wal  secret_key
tests/: conftest.py  test_auth.py  test_manifest.py  test_verify.py  test_worker.py
